# OTUS_Prof_DZ_09

./: CMakeLists.txt  CMakeSettings.json  README.md  async.cpp  main.cpp
.github/workflows/: async.yml
async/: CMakeLists.txt
async/headers/: CommandController.h  Printers.h  libasync.h
async/src/: Printers.cpp  async.cpp  libasync.cpp
headers/: ComandDistr.h  IObserver.h  ISubject.h  Interface.h  Observers.h  OutToStream.h
libasync/: CMakeLists.txt
libasync/headers/: ComandController.h  ComandDistr.h  CommandController.h  IController.h  IObserver.h  IPrinter.h  IPublisher.h  IQueue.h  ISubject.h  MassageQueue.h  Observers.h  PackageSender.h  Printers.h  async.h
libasync/src/: ComandController.cpp  ComandDistr.cpp  CommandController.cpp  MassageQueue.cpp  Observers.cpp  PackageSender.cpp  Printers.cpp  async.cpp
src/: ComandDistr.cpp  Observers.cpp
test/: async_gtest.cpp
